4/2/12 show unreduced equations on lines
4/2/12 add equations (placeholder) to lines
4/2/12 make "Reset All" button white until we decide on colors
4/2/12 add rise/run icon
4/2/12 replace MinimizeMaximizeButtonNode with ToggleButtonNode
4/2/12 load common images statically in LGResources
4/2/12 use transparent background behind control panel title
4/2/12 factor out LineManipulatorNode, so we can play with look of this
4/2/12 round corners of rise/run brackets
4/2/12 add quick-and-dirty icons for visibility controls related to lines
4/2/12 point tool icon for control panel
4/2/12 adjust point tool image and font to fit (-10,-10)
3/30/12 add point tool
3/30/12 convert line model to double precision, to support continuous dragging
3/30/12 handle cases where rise or run is zero
3/30/12 change "Graph Lines" check box to "Lines"
3/30/12 add rise and run brackets, wire up to check boxes
3/30/12 for development, allow all values to range (-10,+10)
3/30/12 add horizontal bracket for displaying run
3/30/12 highlight saved lines on mouseOver
3/30/12 hide manipulators when interactive line is not visible
3/29/12 added manipulators for slope and intercept (no drag handlers yet)
3/29/12 create specialization of graph that deals with direct manipulation and interactivity
3/29/12 add show/hide button for slope-intercept equation
3/29/12 color coding for slope and intercept
3/28/12 move Save Lines button into equation control panel
3/28/12 extend lines a bit beyond the bounds of the grid
3/28/12 create LGColors
3/28/12 constrain lines to the range of the graph
3/28/12 quick-and-dirty implementation of equation using Swing spinners
3/28/12 disable "Save Line" button until the line has been changed
3/28/12 add intermediate nodes to maintain rendering order for interactive, standard and saved lines
3/28/12 add interactive line to graph
3/28/12 wire up Save Line and Erase Lines buttons
3/28/12 disable check boxes for standard lines when "Graph lines" is unchecked