@@ -1,3 +1,4 @@
+4/2/12 show reduced equations on lines
 4/2/12 show unreduced equations on lines
 4/2/12 add equations (placeholder) to lines
 4/2/12 make "Reset All" button white until we decide on colors
